updated to journals
